case studies redesign and editing

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: 18F Consulting
-subtitle: Building a high-performing team of digital experts.
+title_tag: 18F Consulting
+title: Helping agencies digitally transform
 permalink: /work/18f-consulting/
 image: /img/projects/18f_consulting/18f-consulting.png
 image_description: The logo of 18F Consulting.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 110
 display: true
 tags: [digital transformation, chris cairns, robert read]
-excerpt: A specialized team of digital experts within 18F focused on helping agencies achieve digital mastery.
+excerpt: A specialized team of digital experts within 18F focused on helping government agencies achieve digital mastery.
 project_members:
   - chris-cairns
   - robert-read
