--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Adopta.Agency
-subtitle: Fostering a civic movement to improve government's open data.
+title_tag: Adopta.Agency
+title: Making public datasets more accessible
 permalink: /work/adopta-agency/
 image: /img/projects/adopta-agency/adopta-agency.png
 image_description: An abstract image of a government building enclosed within API computing symbols.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 130
 display: true
 tags: [digital services delivery, kin lane]
-excerpt: A civic movement to encourage people to "adopt" government's open datasets, and improve the way these datasets are shared with the public.
+excerpt: A civic movement designed to encourage people to "adopt" government's open datasets, and improve the way these datasets are shared with the public.
 project_members:
   - kin-lane
 technologies:
@@ -34,7 +34,7 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    <a href="http://adopta.agency/" target="_blank">Adopta.Agency</a> is a movement designed
+    <a href="http://adopta.agency/" target="_blank">Adopta.Agency</a> is a civic movement designed
     around an <a href="http://adopta-agency.github.io/adopta-blueprint/" target="_blank">open blueprint process</a>
     that enables anyone to target an open government dataset, and move it forward one step by
     producing JSON, and two steps forward by launching an open API.
