--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Agile Acquisition Framework
-subtitle: Aligning acquisition practices with agile delivery practices.
+title_tag: Agile Acquisition Framework
+title: A guide for making government procurements agile
 permalink: /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.png
 image_description: An abstract image of a Venn diagram showing the intersection between acquisition and agile.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 20
 display: true
 tags: [digital procurement, chris cairns, robert read]
-excerpt: A comprehensive framework for helping government program teams make the paradigm shift from decades-old acquisition practices based on waterfall to modern acquisition practices based on agile.
+excerpt: A comprehensive framework for helping government program teams align acquisition practices with agile delivery practices.
 project_members:
   - chris-cairns
   - robert-read
