--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Agile Delivery Services Marketplace
-subtitle: Streamlining the procurement of custom software solutions.
+title_tag: Agile Delivery Services Marketplace
+title: Streamlining how agencies procure software
 permalink: /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.png
 image_description: An abstract image representing a marketplace of agile vendors.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 30
 display: true
 tags: [digital procurement, chris cairns, robert read]
-excerpt: A federal-wide marketplace of pre-vetted software development vendors who practice agile the right way.
+excerpt: A group of pre-vetted vendors ready to help government agencies use agile practices to build digital services.
 project_members:
   - chris-cairns
   - robert-read
@@ -58,7 +58,8 @@ source_code_url:
 {% capture summary %}
   <p>
     The Agile Delivery Services Marketplace is a federal-wide, pre-vetted pool of
-    software development vendors who practice agile the right way.
+    vendors ready to help agencies use agile software development practices to build
+    digital services.
   </p>
 {% endcapture %}
 
@@ -66,7 +67,7 @@ source_code_url:
   <p>
     Following the Healthcare.gov launch failure, federal agencies started looking
     more and more toward agile as an alternative method to waterfall for delivering
-    custom software solutions. Finding a vendor who excelled at agile, however, was
+    digital services. Finding a vendor who excelled at agile, however, was
     difficult. And even if agencies could find one, traditional methods of contracting
     often fell short of: (a) revealing the makers from the fakers; (b) protecting the
     government's data and source-code ownership rights to prevent vendor lock-in; and
