--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Carrot
-subtitle: Transforming how organizations operate openly and transparently.
+title_tag: Carrot
+title: A leadership communication application
 permalink: /work/carrot/
 redirect_from: /work/opencompany/
 image: /img/projects/carrot/carrot.png
@@ -11,7 +11,7 @@ feature_image_description: Product screenshot of a demo page of the streams func
 order: 5
 display: true
 tags: [digital services delivery, sean johnson]
-excerpt: An open-source, digital platform for organizations to drive new levels of alignment through radical openness and transparency.
+excerpt: A "non-chat" communication solution for leaders struggling to keep everyone focused on what matters most.
 project_members:
   - sean-johnson
 technologies:
@@ -28,43 +28,52 @@ practices:
   - User research
   - User experience design
   - Lean startup
+  - User growth marketing
   - Responsive web design
   - Agile development
   - DevOps
   - API-first development
   - RESTful, HATEOAS API architecture
   - Microservices architecture
+  - Third-party integration
   - Open-source development
   - Cloud hosting
 news_posts:
+  - title: Who Are The Biggest Disruptors of 2019? The Answer May Surprise You
+    url: https://www.inc.com/jonathan-steiman/five-innovative-startups-to-watch-in-2019.html
+  - title: Carrot - Leadership communication for growing and distributed teams
+    url: https://www.producthunt.com/posts/carrot-3c283ae5-337a-409b-b48f-72f15dbcc454
 project_url: https://carrot.io/
 source_code_url: https://github.com/open-company
 ---
 
 {% capture summary %}
   <p>
-    Carrot is an open-source, digital platform that organizations use to drive
-    new levels of alignment and engagement through radical openness and transparency.
+    Carrot is a leadership communication application that helps leaders rise above
+    the noise of chat and email to keep teams alinged around what matters most.
   </p>
 {% endcapture %}
 
 {% capture challenge %}
   <p>
-    Transparency expectations are changing. As a result, organizations need a radical
-    new way to engage with their employees, customers, executives, investors, and other
-    key stakeholders.
+    In the age of Slack and fast-moving conversations, the lack of
+    focus and clarity have become a huge problem in the workplace.
+    Email and chat apps keep everyone connected throughout the day, yet
+    it's become even more difficult for teams to stay aligned around
+    what's most important. The problem is that leadership is getting lost
+    in all the noise.
   </p>
 {% endcapture %}
 
 {% capture solution %}
   <p>
-    Sean Johnson led the Carrot development team to create an open-source,
-    digital transparency platform for organizations. Referred to as "GitHub for the rest of
-    your organization," it simplifies how leaders share key business information such as
-    strategic objectives, performance results, and finances with internal and external
-    stakeholders. By making this information open, accessible, and interactive, the
-    platform enables organizations to align and engage stakeholders in ways that inspire
-    trust, new ideas, and a shared sense of purpose and ownership.
+    To address this problem, Sean Johnson led the product development of a
+    "non-chat" communication application for leaders called Carrot. Powered by
+    the open source <a href="https://github.com/open-company">OpenCompany</a>
+    platform, Carrot is designed to be as delightful and interactive as chat,
+    but asynchronous so people can get caught up on their own time. This enables
+    leaders to keep everyone focused on what matters most in order to build
+    transparency, trust, and stronger teams.
   </p>
 {% endcapture %}
 
