--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Digital Acquisition Accelerator
-subtitle: Accelerating the adoption of digital acquisition practices.
+title_tag: Digital Acquisition Accelerator
+title: Developing more digital acquisition professionals
 permalink: /work/digital-acquisition-accelerator/
 image: /img/projects/digital_acquisition_accelerator/speedometer.png
 image_description: An abstract image of a speedometer.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 120
 display: true
 tags: [digital procurement, chris cairns, shashank khandelwal]
-excerpt: A pilot program designed to accelerate the adoption of digital acquisition practices across government.
+excerpt: A pilot training program designed to accelerate the development of digital acquisition experts across government.
 project_members:
   - chris-cairns
   - shashank-khandelwal
@@ -41,8 +41,8 @@ source_code_url:
 {% capture summary %}
   <p>
     As part of the White House's Office of Management and Budget's Acquisition
-    Innovation Labs initiative, the Digital Acquisition Accelerator was a pilot program
-    designed to accelerate the adoption of digital acquisition practices across the government.
+    Innovation Labs initiative, the Digital Acquisition Accelerator was a pilot training program
+    designed to accelerate the development of digital acquisition experts across the government.
   </p>
 {% endcapture %}
 
