--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Agile Micro-sprints at the SSA
-subtitle: Advancing the turnaround of a troubled program in 3 days.
+title_tag: Social Security Administration
+title: Accelerating agile adoption
 permalink: /work/ssa-agile-microsprints/
 image: /img/projects/ssa_agile_microsprints/microsprint.png
 image_description: Illustration of an agile sprint cycle on various sticky notes.
@@ -32,8 +32,9 @@ source_code_url:
 {% capture summary %}
   <p>
     The Social Security Administration (SSA) needed help turning around
-    a failing case management system modernization program, which included
-    a staff of over 200 government and contractor personnel. We were brought
+    a failing case management system modernization program, called
+    Disability Case Processing System (DCPS), which included a staff of
+    over 200 government and contractor personnel. We were brought
     in to provide advice on transitioning their software delivery practices
     from waterfall to agile, contributing to the start of a successful turnaround.
   </p>
@@ -41,14 +42,13 @@ source_code_url:
 
 {% capture challenge %}
   <p>
-    The SSA's case management system modernization program was
-    suffering from the ill-effects of a waterfall-based software
-    development approach, including the dysfunctional separation of
+    The SSA's DCPS program was suffering from the ill-effects of a waterfall-based
+    software development approach, including the dysfunctional separation of
     users from the development team.
   </p>
 
   <p>
-    With oversight bodies coming down more and more heavily on the program,
+    With oversight bodies coming down more and more heavily on the DCPS program,
     the SSA needed to make immediate course corrections. Leadership decided
     to explore the idea of phasing in the adoption of agile, but the program
     team had no prior experience with this new and more effective way of delivering
@@ -59,16 +59,16 @@ source_code_url:
 {% capture solution %}
   <p>
     To demonstrate the power of agile and how it could be applied within the
-    context of the SSA's troubled program, we designed and facilitated an
+    context of the SSA's troubled DCPS program, we designed and facilitated an
     extensive, hands-on workshop using formal agile practices based on the
     Scrum framework.
   </p>
 
   <p>
-    Over the course of 6 formal sprints packed into 3 days, we guided a small
-    subset of the SSA program team through a collaborative process of writing
-    user stories, prioritizing and grooming a product backlog, implementing the
-    prioritized user stories in the system's development environment, and
+    Over the course of 6 formal sprints packed into 3 days ("micro-sprints"), we
+    guided a small subset of the DCPS program team through a collaborative process of
+    writing user stories, prioritizing and grooming a product backlog, implementing
+    the prioritized user stories in the system's development environment, and
     experiencing other standard Scrum ceremonies such as sprint reviews and
     retrospectives.
   </p>
