--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Cloud Adoption at the TSA
-subtitle: Jumpstarting a movement to the cloud.
+title_tag: Transportation Security Administration
+title: Jumpstarting cloud adoption
 permalink: /work/tsa-cloud-adoption/
 image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.png
 image_description: An abstract image showing a car jumpstarter being used on a cloud.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 60
 display: true
 tags: [digital transformation, chris cairns, shashank khandelwal]
-excerpt: A jumpstart team for accelerating the Transportation Security Administration's transition to a cloud-based operating model.
+excerpt: Accelerating the Transportation Security Administration's transition to a cloud-based operating model.
 project_members:
   - chris-cairns
   - shashank-khandelwal
