--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Digital Transformation Framework
-subtitle: Transforming agencies into digitally-powered organizations.
+title_tag: Digital Transformation Framework
+title: A blueprint for digital government transformation
 permalink: /work/digital-transformation-framework/
 image: /img/projects/digital_transformation_framework/digital-transformation-framework.png
 image_description: A diagram image showing various digital transformation dimensions.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 100
 display: true
 tags: [digital transformation, chris cairns, shashank khandelwal]
-excerpt: A comprehensive framework designed to help agencies transform into digitally-powered organizations.
+excerpt: A comprehensive framework designed to help government agencies transform into digitally-powered organizations.
 project_members:
   - chris-cairns
   - shashank-khandelwal
@@ -52,10 +52,10 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, Chris Cairns and Shashank Khandelwal, as members of 18F and the Federal Chief Information Officer's
-    Technology Transformation Task Force, the precursor to the American Technology Council,
-    collaborated with multiple government technology executives and renowned transformation
-    experts to develop a comprehensive framework for digital transformation. The framework
+    To address this challenge, Chris Cairns and Shashank Khandelwal, as members of 18F and
+    the Federal Chief Information Officer's Technology Transformation Task Force, the precursor
+    to the American Technology Council, collaborated with multiple government technology executives
+    and renowned transformation experts to develop a comprehensive framework for digital transformation. The framework
     incorporates lessons learned and best practices from multiple agencies with digital
     transformation experience, making it designed specifically to address the unique digital
     maturity needs of government organizations.
