--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: TalkTo
-subtitle: Text questions to any business, and receive a response.
+title_tag: TalkTo
+title: A consumer-to-business messaging service
 permalink: /work/talkto/
 image: /img/projects/talkto/talkto.png
 image_description: The logo of TalkTo.
@@ -10,7 +10,7 @@ feature_image_description: Product screenshot of a demo page of the messaging fu
 order: 10
 display: true
 tags: [digital services delivery, sean johnson]
-excerpt: A digital messaging service that lets consumers text any business, and receive an immediate response.
+excerpt: A messaging service that let consumers text any business, and receive an immediate response.
 project_members:
   - sean-johnson
 technologies:
@@ -29,6 +29,7 @@ practices:
   - User research
   - User experience design
   - Lean startup
+  - User growth marketing
   - Mobile-first design
   - Agile development
   - DevOps
