case study edits

--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: Agile Acquisition Framework
-title: A guide for making government procurements agile
+title: Making government procurements agile
 permalink: /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.png
 image_description: An abstract image of a Venn diagram showing the intersection between acquisition and agile.
