--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -58,8 +58,8 @@ source_code_url:
 {% capture summary %}
   <p>
     The Agile Delivery Services Marketplace is a federal-wide, pre-vetted pool of
-    vendors ready to help agencies use agile software development practices to build
-    digital services.
+    vendors who can help agencies use modern agile software development practices
+    to build digital services.
   </p>
 {% endcapture %}
 
