--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: Carrot
-title: A leadership communication application
+title: Building a communication application for leaders
 permalink: /work/carrot/
 redirect_from: /work/opencompany/
 image: /img/projects/carrot/carrot.png
