--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: Digital Transformation Framework
-title: A blueprint for digital government transformation
+title: Digitally transforming government
 permalink: /work/digital-transformation-framework/
 image: /img/projects/digital_transformation_framework/digital-transformation-framework.png
 image_description: A diagram image showing various digital transformation dimensions.
