--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -10,7 +10,7 @@ feature_image_description:
 order: 70
 display: true
 tags: [digital services delivery, robert read, chris cairns]
-excerpt: Using code forensics and modern API practices to dramatically de-risk the modernization of a legacy system used for labor law enforcement at the Department of Labor.
+excerpt: Using code forensics and modern API practices to dramatically de-risk the modernization of a legacy system at the Department of Labor.
 project_members:
   - robert-read
   - chris-cairns
