--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: TalkTo
-title: A consumer-to-business messaging service
+title: Developing a consumer-to-business messaging service
 permalink: /work/talkto/
 image: /img/projects/talkto/talkto.png
 image_description: The logo of TalkTo.
