--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: 18F Consulting
-title: Helping agencies digitally transform
+title: Helping agencies achieve digital mastery
 permalink: /work/18f-consulting/
 image: /img/projects/18f_consulting/18f-consulting.png
 image_description: The logo of 18F Consulting.
@@ -10,7 +10,7 @@ feature_image_description:
 order: 110
 display: true
 tags: [digital transformation, chris cairns, robert read]
-excerpt: A specialized team of digital experts within 18F focused on helping government agencies achieve digital mastery.
+excerpt: A specialized team of digital experts within 18F focused on helping government agencies digitally transform.
 project_members:
   - chris-cairns
   - robert-read
@@ -53,7 +53,8 @@ source_code_url:
 {% capture summary %}
   <p>
     18F Consulting was a specialized team of digital experts within the General
-    Services Administration (GSA) focused on helping agencies achieve digital mastery.
+    Services Administration (GSA) focused on helping agencies realize the benefits of
+    digital transformation.
   </p>
 {% endcapture %}
 
