remove target blank attribute

--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -88,7 +88,7 @@ source_code_url:
     <li>
       A "show, don't tell" or "prototype-as-proposal" approach in which vendors
       were required to submit working prototypes (over written narratives)
-      using <a href="https://open.fda.gov/" target="_blank">openFDA</a> as the
+      using <a href="https://open.fda.gov/">openFDA</a> as the
       basis for evaluating capabilities
     </li>
 
