case study edit

--- a/_projects/recreation_info_database_api.html
+++ b/_projects/recreation_info_database_api.html
@@ -36,7 +36,7 @@ source_code_url:
     the Recreation.gov website would be the only source for browsing national
     park information from RIDB, thus limiting the potential for mobile and other
     forward-thinking types of applications. Proposing the right language helped
-    reduce the risk of the USDA procuring the wrong solution.
+    reduce the USDA's risk of procuring the wrong solution.
   </p>
 {% endcapture %}
 
