--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -117,7 +117,7 @@ source_code_url:
     </li>
 
     <li>
-      Completed technical evaluation of all proposals within weeks by only 3 people
+      Completed technical evaluation of all proposals within weeks by only three people
     </li>
 
     <li>
@@ -125,7 +125,7 @@ source_code_url:
     </li>
 
     <li>
-      Soundness of evaluation methodology withstood 8 protests
+      Soundness of evaluation methodology withstood eight protests
     </li>
 
     <li>
