--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -65,7 +65,7 @@ source_code_url:
   </p>
 
   <p>
-    Over the course of 6 formal sprints packed into 3 days ("micro-sprints"), we
+    Over the course of six formal sprints packed into three days ("micro-sprints"), we
     guided a small subset of the DCPS program team through a collaborative process of
     writing user stories, prioritizing and grooming a product backlog, implementing
     the prioritized user stories in the system's development environment, and
@@ -81,7 +81,7 @@ source_code_url:
     </li>
 
     <li>
-      Within just 3 days of work, produced an astounding improvement to the
+      Within just three days of work, produced an astounding improvement to the
       usability of the system, as expressed by representative users
     </li>
 
