--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -75,7 +75,7 @@ source_code_url:
     Given the rise and convenience of text messaging, Sean Johnson and the TalkTo
     team created web and native mobile versions of an application that lets consumers
     text any business at all, even those that have never heard of TalkTo, and receive
-    a response within 5 minutes. Speed and reliability were critical aspects of the
+    a response within five minutes. Speed and reliability were critical aspects of the
     user experience so Erlang, which is known for its ability to support massively
     scalable soft real-time systems with requirements on high availability, was chosen
     as the backend.
@@ -89,7 +89,7 @@ source_code_url:
     </li>
 
     <li>
-      Averaged business-to-consumer text response time of 5 minutes
+      Averaged business-to-consumer text response time of five minutes
     </li>
 
     <li>
