--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -59,7 +59,7 @@ source_code_url:
   <p>
     The existing technology behind WHISARD was ancient and nearly undocumented. In order to
     have a functioning spike, a complete and valid environment would have to be duplicated.
-    Because the data was sensitive and potentially subject to litigation, we would have
+    Because the data was sensitive and potentially subject to litigation, we'd have
     to work entirely with artificially-created data.
   </p>
 {% endcapture %}
