--- a/pages/join.html
+++ b/pages/join.html
@@ -67,7 +67,7 @@ permalink: /join/
         </ul>
 
         <p>
-          This is not an exhaustive list, but it does represent the most common skills
+          This isn't an exhaustive list, but it does represent the most common skills
           that we seek. Don't see what you do on this list? <a href="/join/#application">Apply anyway</a>!
         </p>
 
