--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -80,7 +80,7 @@ source_code_url:
     To address these challenges, Chris Cairns, Robert Read, and other team members
     within the General Services Administration created the first-ever, federal-wide
     contract vehicle of vendors who specialize in agile delivery services (for example,
-    user-centered design, agile software development, DevOps) using several groundbreaking
+    user-centered design, agile software development, and DevOps) using several groundbreaking
     approaches:
   </p>
 
@@ -136,7 +136,7 @@ source_code_url:
     <li>
       Inspired several federal and state &amp; local agencies (for example,
       Department of Homeland Security, Environmental Protection Agency, State of
-      California, State of Mississippi) to create a similar marketplace
+      California, and State of Mississippi) to create a similar marketplace
     </li>
 
     <li>
