two new case studies

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -47,6 +47,7 @@ news_posts:
   - title: Feds Extend 18F's Silicon Valley Expertise to Cities, States
     url: http://www.govtech.com/federal/feds-extend-18fs-silicon-valley-expertise-to-cities-states.html
 project_url:
+project_cta:
 source_code_url:
 ---
 
