--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -4,7 +4,7 @@ title_tag: Adopta.Agency
 title: Making public datasets more accessible
 permalink: /work/adopta-agency/
 image: /img/projects/adopta-agency/adopta-agency.png
-image_description: An abstract image of a government building enclosed within API computing symbols.
+image_description: Illustration of a government building enclosed within API computing symbols.
 feature_image:
 feature_image_description:
 order: 130
@@ -29,6 +29,7 @@ news_posts:
   - title: Federal Agency Dataset Adoption
     url: https://www.knightfoundation.org/grants/201551217/
 project_url:
+project_cta:
 source_code_url:
 ---
 
