--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -4,7 +4,7 @@ title_tag: Agile Acquisition Framework
 title: Making government procurements agile
 permalink: /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.png
-image_description: An abstract image of a Venn diagram showing the intersection between acquisition and agile.
+image_description: Illustration of a Venn diagram showing the intersection between acquisition and agile.
 feature_image:
 feature_image_description:
 order: 20
@@ -38,6 +38,7 @@ news_posts:
   - title: Feds Extend 18F's Silicon Valley Expertise to Cities, States
     url: http://www.govtech.com/federal/feds-extend-18fs-silicon-valley-expertise-to-cities-states.html
 project_url:
+project_cta:
 source_code_url:
 ---
 
