--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -44,6 +44,7 @@ news_posts:
   - title: Carrot - Leadership communication for growing and distributed teams
     url: https://www.producthunt.com/posts/carrot-3c283ae5-337a-409b-b48f-72f15dbcc454
 project_url: https://carrot.io/
+project_cta: See the site
 source_code_url: https://github.com/open-company
 ---
 
