--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -4,7 +4,7 @@ title_tag: Digital Acquisition Accelerator
 title: Developing more digital acquisition professionals
 permalink: /work/digital-acquisition-accelerator/
 image: /img/projects/digital_acquisition_accelerator/speedometer.png
-image_description: An abstract image of a speedometer.
+image_description: Illustration of a speedometer.
 feature_image:
 feature_image_description:
 order: 120
@@ -35,6 +35,7 @@ news_posts:
   - title: New 18F Digital Acquisition 'Playbook' Opens Up Federal Knowledge to All Levels of Government
     url: http://www.govtech.com/civic/New-18F-Digital-Acquisition-Playbook-Opens-Up-Federal-Knowledge.html
 project_url:
+project_cta:
 source_code_url:
 ---
 
