--- a/_projects/recreation_info_database_api.html
+++ b/_projects/recreation_info_database_api.html
@@ -4,7 +4,7 @@ title_tag: U.S. Department of Agriculture
 title: Advocating for API-accessible recreation data
 permalink: /work/recreation-information-database-api/
 image: /img/projects/recreation-information-database-api/recreation-api.png
-image_description: An abstract image of a camping tent enclosed within API computing symbols.
+image_description: Illustration of a camping tent enclosed within API computing symbols.
 feature_image:
 feature_image_description:
 order: 150
@@ -24,6 +24,7 @@ news_posts:
   - title: Advocates Call for Open Data in Outdoor Recreation
     url: http://www.govtech.com/opinion/Advocates-Call-for-Open-Data-in-Outdoor-Recreation.html
 project_url:
+project_cta:
 source_code_url:
 ---
 
