--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -26,6 +26,7 @@ news_posts:
   - title: A story of an agile workshop
     url: https://18f.gsa.gov/2015/02/11/a-story-of-an-agile-workshop/
 project_url:
+project_cta:
 source_code_url:
 ---
 
