--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -4,7 +4,7 @@ title_tag: Transportation Security Administration
 title: Jumpstarting cloud adoption
 permalink: /work/tsa-cloud-adoption/
 image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.png
-image_description: An abstract image showing a car jumpstarter being used on a cloud.
+image_description: Illustration showing a car jumpstarter being used on a cloud.
 feature_image:
 feature_image_description:
 order: 60
@@ -34,6 +34,7 @@ news_posts:
   - title: Creating a Culture for IT Innovation
     url: http://www.cloudtechnologyinsights.com/cioviewpoint/creating-a-culture-for-it-innovation-nid-153.html
 project_url:
+project_cta:
 source_code_url:
 ---
 
