--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -4,7 +4,7 @@ title_tag: U.S. Navy
 title: Better decisions through protosketching
 permalink: /work/us-navy-protosketching/
 image: /img/projects/us_navy_protosketching/protosketching.png
-image_description: An abstract image of a website being prototyped on a laptop.
+image_description: Illustration of a website being prototyped on a laptop.
 feature_image:
 feature_image_description:
 order: 90
@@ -35,6 +35,7 @@ news_posts:
   - title: Ready-2-Serve (R2S)
     url: https://www.youtube.com/watch?v=-3l4Kulqq5I
 project_url:
+project_cta:
 source_code_url:
 ---
 
