--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -4,7 +4,7 @@ title_tag: Agile Delivery Services Marketplace
 title: Streamlining how agencies procure software
 permalink: /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.png
-image_description: An abstract image representing a marketplace of agile vendors.
+image_description: Illustration representing a marketplace of agile vendors.
 feature_image:
 feature_image_description:
 order: 30
@@ -52,6 +52,7 @@ news_posts:
   - title: Guidelines for Agile, Challenge-based Procurement
     url: https://hackernoon.com/guidelines-for-agile-challenge-based-procurement-4531ff335422
 project_url:
+project_cta:
 source_code_url:
 ---
 
