--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -30,6 +30,7 @@ news_posts:
   - title: Transforming digital government
     url: https://govfresh.com/2016/12/transforming-digital-government/
 project_url:
+project_cta:
 source_code_url:
 ---
 
