--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: Veterans Affairs
-title: Expanding the adoption APIs
+title: Expanding the adoption of APIs
 permalink: /work/va-api-developer-outreach/
 image: /img/projects/va_api_developer_outreach/api-developer-outreach.png
 image_description: Illustration of a megaphone enclosed within API computing symbols.
