case study edits

--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -69,13 +69,13 @@ source_code_url:
     </li>
 
     <li>
-      Performing a technical teardown of flagship mobile apps across VA-like industries
+      Conducting a technical teardown of flagship mobile apps across VA-like industries
       to understand the technical approaches used by other organizations when creating
       flagship mobile apps
     </li>
 
     <li>
-      Interviewing several organizations to gain insight how they've approached
+      Interviewing several organizations to gain insight into how they've approached
       creating their flagship mobile apps
     </li>
 
