add diffusion marketplace case study

--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -6,8 +6,8 @@ permalink: /work/va-api-scorecard-mvp/
 image: /img/projects/va_api_scorecard_mvp/api-scorecard.png
 image_description: Illustration of a scorecard for APIs.
 feature_image: /img/projects/va_api_scorecard_mvp/va-api-scorecard-screenshot.png
-feature_image_description:
-order: 12
+feature_image_description: Product screenshot of the VA API Scorecard.
+order: 40
 display: true
 tags: [microconsulting, api microconsulting, victor zapanta, nick bristow, kin lane, robert read, chris cairns]
 excerpt: A minimum viable product enabling the Veterans Affairs to start learning how best to govern their growing portfolio of APIs.
