--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -45,8 +45,8 @@ source_code_url:
   <p>
     The Veterans Affairs (VA) needs a way to identify and spread the adoption of proven
     clinical and administrative practices across its healthcare delivery network,
-    so we were brought into to build a knowledge management platform &mdash;
-    called the Diffusion Marketplace &mdash; in order to achieve this important goal.
+    so we were brought into to build a knowledge management platform
+    in order to achieve this important goal.
   </p>
 {% endcapture %}
 
