edit to diffusion case study

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -43,9 +43,9 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    The Veterans Affairs (VA) needs a way to identify and spread the adoption of proven
-    clinical and administrative practices across its healthcare delivery network,
-    so we were brought into to build a knowledge management platform
+    The Veterans Affairs (VA) needs a way to systematically identify and spread the
+    adoption of proven clinical and administrative practices across its healthcare
+    delivery network, so we were brought into to build a knowledge management platform
     in order to achieve this important goal.
   </p>
 {% endcapture %}
