edit api scorecard

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -29,7 +29,7 @@ practices:
   - User experience design
   - Comparative analysis
   - Technical discovery
-  - Design systems
+  - Design system
   - Responsive web design
   - Agile development
   - DevOps
