edits to diffusion case study

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -45,7 +45,7 @@ source_code_url:
   <p>
     The Veterans Affairs (VA) needs a way to systematically identify and spread the
     adoption of proven clinical and administrative practices across its healthcare
-    delivery network, so we were brought into to build a knowledge management platform
+    delivery network. We were brought into to build a knowledge management platform
     in order to achieve this important goal.
   </p>
 {% endcapture %}
@@ -74,7 +74,7 @@ source_code_url:
     this challenge through the delivery of a knowledge management platform called
     the Diffusion Marketplace. The purpose of this platform is to empower VHA
     practitioners and other employees to identify and disseminate promising
-    clinical and administrative practices.
+    healthcare practices.
   </p>
 
   <p>
@@ -87,7 +87,8 @@ source_code_url:
 
   <p>
     After our primary design solution is validated, the current plan is to
-    scale the number of practices showcased, and to continue to iterate on the development of other key features.
+    scale the number of practices showcased, and to continue to iterate on the
+    development of other key features.
   </p>
 {% endcapture %}
 
