--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -34,7 +34,7 @@ source_code_url:
 {% capture summary %}
   <p>
     The Veterans Affairs (VA) wanted to explore options for improving the mobile user
-    experience of the new VA.gov, so we proposed a mobile product strategy based on a
+    experience of the new VA.gov. We proposed a mobile product strategy based on a
     combination of our own expertise and extensive research.
   </p>
 {% endcapture %}
