case study edits

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -55,7 +55,7 @@ source_code_url:
     The VA operates the nation's largest healthcare system, called
     the Veterans Healthcare Administration (VHA). It consists of 150 medical
     centers and nearly 1,400 community-based outpatient clinics, community
-    living centers, Vet Centers, and Domiciliary. Together these healthcare
+    living centers, Vet centers, and domiciliary. Together these healthcare
     facilities, and the more than 53,000 licensed healthcare practitioners,
     provide comprehensive care to more than 8.3 million Veterans each year.
   </p>
