--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -31,7 +31,7 @@ source_code_url:
 {% capture summary %}
   <p>
     The Veterans Affairs' (VA's) API Platform Management team needed insight
-    into current best practices for API governance. We delivered a
+    into current best practices for API governance. So we delivered a
     comprehensive research report that drew on a combination of our own
     expertise and information gathered from interviewing leading organizations.
   </p>
