blog post edits

--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -31,9 +31,9 @@ source_code_url:
 {% capture summary %}
   <p>
     The Veterans Affairs' (VA's) API Platform Management team wanted to increase
-    adoption of their APIs, so we delivered a comprehensive research report that
-    drew on a combination of our own expertise and information gathered from
-    interviewing leading organizations.
+    adoption of their APIs. So we delivered them a comprehensive research report
+    on how to accomplish that, based on a combination of our own expertise and
+    information gathered from interviewing leading organizations.
   </p>
 {% endcapture %}
 
