--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -46,7 +46,7 @@ source_code_url: https://github.com/skylight-hq/va-api-scorecard
 {% capture summary %}
   <p>
     The Veterans Affairs needed to start preparing for how best to govern
-    their growing portfolio of APIs, so we delivered them a minimum viable
+    their growing portfolio of APIs. So we delivered them a minimum viable
     product (MVP) of an API Scorecard governance tool.
   </p>
 {% endcapture %}
