--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -34,8 +34,8 @@ source_code_url:
 {% capture summary %}
   <p>
     The Veterans Affairs (VA) wanted to explore options for improving the mobile user
-    experience of the new VA.gov. We proposed a mobile product strategy based on a
-    combination of our own expertise and extensive research.
+    experience of the new VA.gov. So we gave them a proposed a mobile product strategy
+    based on a combination of our own expertise and extensive research.
   </p>
 {% endcapture %}
 
