--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -33,7 +33,7 @@ source_code_url:
     The Veterans Affairs' (VA's) API Platform Management team needed insight
     into current best practices for API governance. So we delivered them a
     comprehensive research report that drew on a combination of our own
-    expertise in this area and information gathered from interviewing
+    expertise and information gathered from interviewing
     leading organizations.
   </p>
 {% endcapture %}
