add new case study

--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -24,7 +24,7 @@ practices:
   - Research analysis and synthesis
 news_posts:
 project_url: https://github.com/skylight-hq/VA-Micropurchase-Repo/blob/master/2018-07-05_Developer_Outreach/Deliverables/Skylight/skylight_api_developer_outreach_writeup.md
-project_cta: Read the report
+project_cta: See the report
 source_code_url:
 ---
 
