--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -24,7 +24,7 @@ practices:
   - Research analysis and synthesis
 news_posts:
 project_url: https://github.com/skylight-hq/VA-Micropurchase-Repo/blob/master/2018-06-06_Governance_%20Models_in_Public_and_Private_Sector/Deliverables/Skylight/skylight_api_governance_research_report.md
-project_cta: Read the report
+project_cta: See the report
 source_code_url:
 ---
 
