--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -27,7 +27,7 @@ practices:
   - Research analysis and synthesis
 news_posts:
 project_url: https://github.com/skylight-hq/VA-Micropurchase-Repo/blob/master/2018-13-2018_VA%20Flagship_Mobile_Application/Deliverables/Skylight%20Digital%20LLC/va_flagship_mobile_application_analysis_summary.md
-project_cta: Read the report
+project_cta: See the report
 source_code_url:
 ---
 
