--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -18,7 +18,7 @@ project_members:
   - robert-read
   - chris-cairns
 technologies:
-  - HTML / CSS
+  - HTML / CSS / Sass
   - JavaScript
   - U.S. Web Design Standards
   - Balsamiq
