edit case study

--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -40,7 +40,7 @@ source_code_url: https://github.com/skylight-hq/va-api-landscape
 {% capture summary %}
   <p>
     The Veterans Affairs' (VA's) API Platform Management team needed help
-    developing a near-term roadmap of APIs to deliver, so we provided an
+    developing a near-term roadmap of APIs to deliver. So we provided an
     analysis of the VA's millions of public datasets and recommended which
     of these resources would be good candidates for turning into APIs, based
     on potential value to the Veteran community.
