case study edit

--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -77,7 +77,7 @@ source_code_url: https://github.com/skylight-hq/va-api-landscape
     </li>
 
     <li>
-      Analyzing and synthesizing the results of spidering process and the user research
+      Analyzing and synthesizing the results of the spidering process and the user research
     </li>
 
     <li>
