add new case study

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -9,7 +9,7 @@ feature_image:
 feature_image_description:
 order: 5
 display: true
-tags: [digital services delivery, aera hoffman, tom black]
+tags: [digital services delivery, aera hoffman, tom black, josh dorothy]
 excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to Veterans through the dissemination of promising clinical and administrative practices.
 project_members:
   - aera-hoffman
